--- a/VideoPlayer/VideoPlayer.csproj
+++ b/VideoPlayer/VideoPlayer.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="iImage_x64.cs" />
+    <Compile Include="iImage.x64.cs" />
     <Compile Include="iMatchDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,12 +82,6 @@
     <Compile Include="iType.cs" />
     <Compile Include="iVisionErr.cs" />
     <Compile Include="iVision_x64.cs" />
-    <Compile Include="Mainfrm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Mainfrm.Designer.cs">
-      <DependentUpon>Mainfrm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -95,9 +89,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="iMatchDialog.resx">
       <DependentUpon>iMatchDialog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Mainfrm.resx">
-      <DependentUpon>Mainfrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
